uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    tailscale.com/proxy-class: "enable-tun"
  annotations:
    tailscale.com/expose: 'true'
    tailscale.com/hostname: 'cloud-uptimekuma'
spec:
  internalTrafficPolicy: Cluster
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: uptime-kuma
    app.kubernetes.io/name: uptime-kuma
  sessionAffinity: None
  type: ClusterIP
