uptime-kuma/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-uptime-kuma.ucdialplans.com"
  rules:
  - backendRefs:
    - name: uptime-kuma
      namespace: uptime-kuma
      kind: Service
      port: 80
